fix: Header on mobile

--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -1,22 +1,34 @@
+@use "../abstracts/breakpoints" as b;
+
 .header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1rem;
-  position: relative;
   padding: 1rem 2rem;
   background-color: var(--primary);
 }
 
+@include b.breakpoint("sm") {
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+  }
+}
+
 .header__icons {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0.75rem;
-  gap: 0.375rem;
-  color: var(--primary);
-  background: var(--surface);
-  border-radius: 999px;
+  display: none;
+}
+
+@include b.breakpoint("sm") {
+  .header__icons {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0.75rem;
+    gap: 0.375rem;
+    color: var(--primary);
+    background: var(--surface);
+    border-radius: 9999px;
+  }
 }
 
 .header__text {
